--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-11 [第一次正面對決 賀錦麗與川普激辯中國政策](/articles/dw/1024331.md)
+
 9-10 [0比7之后 中国足球界开始新一轮整肃](/articles/dw/1024332.md)
 
 9-10 [德国大众30年来未有：员工金饭碗不再](/articles/dw/1024333.md)
@@ -598,6 +600,4 @@
 8-11 [地方财政吃紧 中国刮起补税风](/articles/dw/1024629.md)
 
 8-11 [7月中国汽车总销量下降而出口增长](/articles/dw/1024630.md)
-
-8-11 [钻石恒久远……水星遍地捡？](/articles/dw/1024631.md)
 
