--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-11 [【404文库】亮见｜祥子累死在了车上](/articles/cdt/337210.md)
+
 9-11 [每日一语 2024.9.10](/articles/cdt/337213.md)
 
 9-11 [地球人口口｜“这个夏天再也捂不热他的尸体。”](/articles/cdt/337219.md)
@@ -598,6 +600,4 @@
 8-7 [建设性意见｜山东省属事业单位收回编制，步子可以迈得再大一点](/articles/cdt/338243.md)
 
 8-5 [每日一语 2024.8.5](/articles/cdt/338252.md)
-
-8-5 [码头水鬼 | 泡在洪水里看奥运](/articles/cdt/338258.md)
 
