--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-11 [荷兰餐桌上的印尼美味佳肴](/articles/dw/1024327.md)
+
+9-11 [德国东部 为何右翼政党尤其强势？](/articles/dw/1024328.md)
+
 9-11 [在中国的信心降至最低点——欧盟商会警告中国或失去吸引力](/articles/dw/1024329.md)
 
 9-11 [大众砸铁饭碗走出第一步：结束就业保障协议](/articles/dw/1024330.md)
@@ -596,8 +600,4 @@
 8-11 [林郁婷巴黎奥运摘金 国际媒体如此评价](/articles/dw/1024625.md)
 
 8-11 [“正义与对侵略者施压”--泽连斯基在库尔斯克攻势以来首次表态](/articles/dw/1024626.md)
-
-8-11 [“金砖之桥”能取代美元吗？](/articles/dw/1024627.md)
-
-8-11 [马斯克如何利用X平台干预全球政治？](/articles/dw/1024628.md)
 
