--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-12 [华盛顿升级对北京的批评，首次指责中国直接强化俄罗斯战争机器](/articles/voa/1012664.md)
+
+9-12 [苹果、华为手机“争霸” 分析：iPhone16在华面临挑战大](/articles/voa/1012665.md)
+
 9-11 [谷歌中国前负责人：中国人工智能模型落后美国6至9个月](/articles/voa/1012666.md)
 
 9-11 [俄乌战争进入关键节点，美英最高外交官罕见联访基辅](/articles/voa/1012667.md)
@@ -596,8 +600,4 @@
 8-30 [太平洋岛国领导人拒绝北京切断与台湾关系的呼吁，延续与台北接触政策](/articles/voa/1012962.md)
 
 8-30 [台风“珊珊”席卷日本各地带来暴雨引发交通混乱](/articles/voa/1012963.md)
-
-8-30 [哈里斯誓言在移民问题上采取更强硬态度，支持为以色列提供武器](/articles/voa/1012964.md)
-
-8-30 [中国海警称菲律宾在萨比纳浅滩的“冒险行径”可能引发事故](/articles/voa/1012965.md)
 
