--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-12 [23年后，美国纪念9/11恐怖袭击受害者](/articles/voa/1012661.md)
+
 9-12 [台湾幻影2000战机坠毁，军事专家：难敌中共空军 急需汰换](/articles/voa/1012662.md)
 
 9-12 [印度政府下令提高中国和越南某些钢铁产品关税12-30%，减缓其输入速度](/articles/voa/1012663.md)
@@ -598,6 +600,4 @@
 8-30 [乌克兰空军司令：美国专家加入F-16战机坠毁原因调查](/articles/voa/1012959.md)
 
 8-30 [路透社：俄罗斯与中国合作伙伴的支付障碍在八月加剧](/articles/voa/1012960.md)
-
-8-30 [南中国海紧张升温之际 菲律宾与越南同意深化军事与防务关系](/articles/voa/1012961.md)
 
