--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-12 [一名前中情局人员因充当中国间谍而被判10年监禁并终生接受测谎检查](/articles/voa/1012654.md)
+
+9-12 [美众院“中国周”再通过三项抗衡中国影响力法案](/articles/voa/1012655.md)
+
 9-12 [曾任田纳西州联邦参议员和美国驻华大使的尚慕杰逝世](/articles/voa/1012656.md)
 
 9-12 [美国对华出口管制层层加码，新一轮措施全面升级防堵漏洞](/articles/voa/1012657.md)
@@ -596,8 +600,4 @@
 8-31 [日本军费预算明年再创记录，发展重点在无人武器和人工智能](/articles/voa/1012952.md)
 
 8-30 [国际市场疲软，国内竞争加剧，中国三大航空公司上半年集体亏损](/articles/voa/1012953.md)
-
-8-30 [国际失踪者日:台湾出版人富察上海遭捕逾500日，台湾民团吁中国确保人权](/articles/voa/1012954.md)
-
-8-30 [毛泽东前秘书李锐日记归属案继续审理中,专家证人陈述中共是否插手](/articles/voa/1012955.md)
 
