--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-12 [若特朗普当选，最大受益人可能是中国](/articles/nyt/1042392.md)
+
 9-11 [美国女“毒骡”在中国被判无期，家人向美政府求助](/articles/nyt/1042393.md)
 
 9-11 [贺锦丽特朗普首次正面交锋：亮点与大选形势变化](/articles/nyt/1042394.md)
@@ -598,6 +600,4 @@
 6-11 [欢迎来到人工智能手机时代](/articles/nyt/1042690.md)
 
 6-11 [四名美国教师在吉林一公园内遇袭](/articles/nyt/1042691.md)
-
-6-11 [重启核军备竞赛？应对中俄核战略，美国考虑扩大核武库](/articles/nyt/1042692.md)
 
