--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-12 [在华美企对中国的乐观情绪跌至历史最低点](/articles/voa/1012651.md)
+
 9-12 [朝鲜发射多枚短程弹道导弹](/articles/voa/1012652.md)
 
 9-12 [以色列空袭击中加沙一所联合国学校和两处住宅 至少34人死亡](/articles/voa/1012653.md)
@@ -598,6 +600,4 @@
 8-31 [斯里兰卡总统选举：印度与中国的拉锯战](/articles/voa/1012949.md)
 
 8-31 [林培瑞：司法争夺战-李锐日记放哪里？](/articles/voa/1012950.md)
-
-8-31 [秘鲁外长：拜登、习近平将出席利马亚太经合组织峰会](/articles/voa/1012951.md)
 
