--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-12 [知识分子｜揭秘“人骨工厂”，医学需求如何催生地下罪恶产业？](/articles/cdt/337179.md)
+
 9-12 [每日一语 2024.9.11](/articles/cdt/337186.md)
 
 9-11 [单读｜不断搬家，不断“失学”，“旧改”中的孩子该如何告别家园？](/articles/cdt/337188.md)
@@ -598,6 +600,4 @@
 8-7 [现实的模样｜网络举报，成了这世道的“救命稻草”](/articles/cdt/338202.md)
 
 8-7 [读宋史的赵大胖｜这些年读历史，感悟到的一些大实话](/articles/cdt/338206.md)
-
-8-7 [岭南酷儿Lingnan queer｜中国人对同性恋接纳度仅20%，低于刑满释放、艾滋病、乞讨者](/articles/cdt/338211.md)
 
