--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-12 [駐美經貿辦恐失去特權 對香港影響幾何？](/articles/dw/1024321.md)
+
+9-12 [監視和監控：在歐洲求學的中國學生](/articles/dw/1024322.md)
+
 9-12 [香山論壇開幕 北京能發揮多少主場優勢？](/articles/dw/1024323.md)
 
 9-11 [菲律宾海军：最近一周监测到207艘中国船只](/articles/dw/1024324.md)
@@ -596,8 +600,4 @@
 8-12 [跨越边界 乌克兰突袭库尔斯克](/articles/dw/1024619.md)
 
 8-12 [深陷興奮劑疑雲 中國仍寫北京奧運以來最佳績](/articles/dw/1024620.md)
-
-8-12 [美中金牌總數平手 中國寫北京奧運以來最佳績](/articles/dw/1024621.md)
-
-8-11 [菲律宾总统：中国空军的行动“非法且鲁莽”](/articles/dw/1024622.md)
 
