--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-12 [中国的警察国家监控技术通过公安论坛走向全球](/articles/voa/1012649.md)
+
 9-12 [中国高级将领称将粉碎外来势力对南中国海的侵犯](/articles/voa/1012650.md)
 
 9-12 [在华美企对中国的乐观情绪跌至历史最低点](/articles/voa/1012651.md)
@@ -598,6 +600,4 @@
 8-31 [太平洋岛国论坛涉台表述令中国官员发怒，峰会公报被下架](/articles/voa/1012947.md)
 
 8-31 [尽管国际刑事法院发布了逮捕令，但克里姆林宫对普京访问蒙古“不担心”](/articles/voa/1012948.md)
-
-8-31 [斯里兰卡总统选举：印度与中国的拉锯战](/articles/voa/1012949.md)
 
