--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-12 [台湾人杨智渊被中国判刑9年 评论：最好最安全就是不去中国](/articles/voa/1012647.md)
+
 9-12 [菲律宾称对萨比纳浅滩的立场坚定，但寻求缓和与中国的紧张关系](/articles/voa/1012648.md)
 
 9-12 [中国的警察国家监控技术通过公安论坛走向全球](/articles/voa/1012649.md)
@@ -598,6 +600,4 @@
 8-31 [以色列袭击在加沙的援助车队，造成四名巴勒斯坦人死亡](/articles/voa/1012945.md)
 
 8-31 [朝鲜撤回公开注册潜艇的决定](/articles/voa/1012946.md)
-
-8-31 [太平洋岛国论坛涉台表述令中国官员发怒，峰会公报被下架](/articles/voa/1012947.md)
 
