--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-12 [中国指示电动车厂家确保关键技术留在国内，避免在土印等国投资](/articles/voa/1012645.md)
+
+9-12 [中国商务部长访欧，为争取欧盟放宽中国电动车进口关税做最后努力](/articles/voa/1012646.md)
+
 9-12 [台湾人杨智渊被中国判刑9年 评论：最好最安全就是不去中国](/articles/voa/1012647.md)
 
 9-12 [菲律宾称对萨比纳浅滩的立场坚定，但寻求缓和与中国的紧张关系](/articles/voa/1012648.md)
@@ -596,8 +600,4 @@
 8-31 [F-16坠毁后，泽连斯基将乌空军司令撤职](/articles/voa/1012943.md)
 
 8-31 [在地缘政治竞争背景下，太平洋岛国领导人宣布支持区域警务协议](/articles/voa/1012944.md)
-
-8-31 [以色列袭击在加沙的援助车队，造成四名巴勒斯坦人死亡](/articles/voa/1012945.md)
-
-8-31 [朝鲜撤回公开注册潜艇的决定](/articles/voa/1012946.md)
 
