--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-13 [每日一语 2024.9.12](/articles/cdt/337154.md)
+
 9-13 [ida｜一个公众号的倒掉](/articles/cdt/337161.md)
 
 9-12 [六神磊磊读金庸｜ 足球是一个逆子](/articles/cdt/337165.md)
@@ -598,6 +600,4 @@
 8-8 [木蹊说｜禁掉“掼蛋之风”，这世界就好了吗？](/articles/cdt/338186.md)
 
 8-8 [衣者朝新｜劳东燕：法律与新闻不可能长期处于低谷](/articles/cdt/338191.md)
-
-8-8 [稻草和飞花｜哈西娜的最后几个小时](/articles/cdt/338192.md)
 
