--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
+
 9-13 [孙立平｜过剩产能出清之日，就是真正拐点到来之时](/articles/cdt/337153.md)
 
 9-13 [每日一语 2024.9.12](/articles/cdt/337154.md)
@@ -598,6 +600,4 @@
 8-8 [【404文库】澎湃新闻｜盗窃倒卖数千具尸体制作植入材料、75人涉案，地方民政部门回应](/articles/cdt/338176.md)
 
 8-8 [【旧文重温】记者刘向南｜我在两广采访“殡葬官员组织倒卖尸体案”](/articles/cdt/338178.md)
-
-8-8 [知灼｜起底倒卖4000具尸体操控者李宝兴：资深科研教授，曾获“全国劳模”称号](/articles/cdt/338182.md)
 
