--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-13 [韩国深伪色情犯罪激增，厌女文化助长网络性暴力](/articles/nyt/1042388.md)
+
 9-12 [这场辩论告诉我们，特朗普是可以被战胜的](/articles/nyt/1042389.md)
 
 9-12 [求神拜佛盼“上岸”：苦于美国H-1B签证抽签的中国移民](/articles/nyt/1042390.md)
@@ -598,6 +600,4 @@
 6-12 [一个被判有罪的儿子对拜登意味着什么](/articles/nyt/1042686.md)
 
 6-12 [美国将三家中国公司列入制裁名单，称涉及新疆强迫劳动](/articles/nyt/1042687.md)
-
-6-12 [谋划、突袭、交火与死亡：还原以色列营救人质行动](/articles/nyt/1042688.md)
 
