--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-13 [中国官方采用新宣传手段，试图重塑西藏和新疆人权叙事](/articles/voa/1012628.md)
+
+9-13 [击毙本·拉登的美军精锐为保护台湾密训？国防部：军人为“各种突发事件进行准备和培训”](/articles/voa/1012629.md)
+
 9-13 [防止中国等对手规避制裁，众院通过《制裁清单协调法》，参议员跨党推出法案参院版](/articles/voa/1012630.md)
 
 9-13 [签署六个月后，美国与太平洋岛国《自由联系协定》的关键措施仍未落实](/articles/voa/1012631.md)
@@ -596,8 +600,4 @@
 9-1 [以色列说，在加沙发现无名尸体](/articles/voa/1012926.md)
 
 9-1 [日本要其勤劳的公民尝试每星期工作四天](/articles/voa/1012927.md)
-
-9-1 [乌克兰与俄罗斯相互攻击，导致几十人伤亡](/articles/voa/1012928.md)
-
-9-1 [以色列空袭在加沙打死几十人，脊髓灰质炎疫苗接种同时接近](/articles/voa/1012929.md)
 
