--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-13 [独立检察官最终报告称世界反兴奋剂机构对中国案处理未“偏袒”，但不作为很“奇怪”](/articles/voa/1012624.md)
+
 9-13 [德国军舰在南中国海游弋凸显其应对中国威胁的立场](/articles/voa/1012625.md)
 
 9-13 [众院通过28项中国法案 议长称将锁定美中贸易问题](/articles/voa/1012626.md)
@@ -598,6 +600,4 @@
 9-1 [中国公民记者张展传前往甘肃营救友人后再度被捕](/articles/voa/1012922.md)
 
 9-1 [德国重新启动遣返阿富汗人 极右翼政党有望首次赢得地区选举](/articles/voa/1012923.md)
-
-9-1 [中非合作论坛即将召开 习近平强调为“全球南方”贡献力量](/articles/voa/1012924.md)
 
