--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-13 [路透：美国政府敲定对中国产品的惩罚性关税，电动车加征100%，半导体50%](/articles/voa/1012618.md)
+
 9-13 [中国批准从2025年1月起提高退休年龄的计划](/articles/voa/1012619.md)
 
 9-13 [俄罗斯军机环绕日本 日战机紧急升空应对](/articles/voa/1012620.md)
@@ -598,6 +600,4 @@
 9-1 [伦敦港人集会游行记念831事件五周年 受袭者要坚持说出真相](/articles/voa/1012916.md)
 
 9-1 [俄称莫斯科附近炼油厂和发电厂遇袭，基辅承认乌东前线乌军处境“困难”](/articles/voa/1012917.md)
-
-9-1 [泰国饱受中国价格战及不法活动双重冲击](/articles/voa/1012918.md)
 
