--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-13 [路透独家：俄罗斯使用中国产航空发动机制造新型自杀式无人机](/articles/voa/1012615.md)
+
+9-13 [缅甸反政府武装逐步掌控中缅边境，中国援助军政府引发民众反弹](/articles/voa/1012616.md)
+
+9-13 [美众院密集通过抗中法案 中国恐无力反制](/articles/voa/1012617.md)
+
 9-13 [路透：美国政府敲定对中国产品的惩罚性关税，电动车加征100%，半导体50%](/articles/voa/1012618.md)
 
 9-13 [中国批准从2025年1月起提高退休年龄的计划](/articles/voa/1012619.md)
@@ -594,10 +600,4 @@
 9-2 [拜登政府推迟宣布中国制造商品的关税](/articles/voa/1012913.md)
 
 9-2 [非洲领导人聚集北京，在美中竞争大背景下继续向中国政府要钱](/articles/voa/1012914.md)
-
-9-1 [内塔尼亚胡就人质被杀发表声明，发誓要找哈马斯“算账”](/articles/voa/1012915.md)
-
-9-1 [伦敦港人集会游行记念831事件五周年 受袭者要坚持说出真相](/articles/voa/1012916.md)
-
-9-1 [俄称莫斯科附近炼油厂和发电厂遇袭，基辅承认乌东前线乌军处境“困难”](/articles/voa/1012917.md)
 
