--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-13 [罚没4.41亿，停业半年：普华永道受中国“顶格”处罚](/articles/dw/1024306.md)
+
 9-13 [客座评论：蒙古助普京打破国际通缉“魔咒”？](/articles/dw/1024307.md)
 
 9-13 [各方交锋在香山  习近平泽连斯基下月会晤？](/articles/dw/1024308.md)
@@ -598,6 +600,4 @@
 8-13 [消息人士：越共新任总书记苏林下周访华会习近平](/articles/dw/1024604.md)
 
 8-13 [被扣台湾渔船部分船员获释 船长仍在押](/articles/dw/1024605.md)
-
-8-13 [中国今年第二季度外商直接投资出现负增长](/articles/dw/1024606.md)
 
