--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-14 [英国支持基辅袭击俄罗斯本土惹恼莫斯科，俄罗斯驱逐六名驻俄英国外交官](/articles/voa/1012609.md)
+
 9-13 [中国证劵业组“超级航母”与华尔街竞争 专家称仅突显经济确实衰退](/articles/voa/1012610.md)
 
 9-13 [香港记协称几十名香港记者及部分家人遭到“爱国者”骚扰和恐吓](/articles/voa/1012611.md)
@@ -598,6 +600,4 @@
 9-2 [台湾民众党主席柯文哲遭涉贪调查 经侦讯后获释](/articles/voa/1012907.md)
 
 9-2 [8月财新中国制造业PMI重回扩张 但外需下滑](/articles/voa/1012908.md)
-
-9-2 [中国在非洲的五个重要“一带一路”项目](/articles/voa/1012909.md)
 
