--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-14 [美中关系持续紧张之际，两军恢复高层沟通](/articles/voa/1012607.md)
+
 9-14 [美国众议院通过法案，为反击中国虚假宣传拨款16亿美元](/articles/voa/1012608.md)
 
 9-14 [英国支持基辅袭击俄罗斯本土惹恼莫斯科，俄罗斯驱逐六名驻俄英国外交官](/articles/voa/1012609.md)
@@ -598,6 +600,4 @@
 9-2 [乌克兰军方：俄罗斯向基辅发射了一系列无人机及导弹攻击](/articles/voa/1012905.md)
 
 9-2 [“烂尾娃”一代：中国青年的失业问题](/articles/voa/1012906.md)
-
-9-2 [台湾民众党主席柯文哲遭涉贪调查 经侦讯后获释](/articles/voa/1012907.md)
 
