--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-23 [事实核查：黎巴嫩发生iPhone爆炸事件了吗？](/articles/dw/1024219.md)
+
 9-23 [研究:特朗普若当选 德国外贸将遭重创](/articles/dw/1024220.md)
 
 9-23 [德国选项党成为勃兰登堡州议会第二大党](/articles/dw/1024221.md)
@@ -598,6 +600,4 @@
 8-22 [班克斯让动物重获自由](/articles/dw/1024517.md)
 
 8-22 [台湾10名退役军官间谍案宣判 8人获刑 最高13年](/articles/dw/1024518.md)
-
-8-22 [美国高官在纽约会见达赖喇嘛](/articles/dw/1024519.md)
 
