--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-23 [客座评论：宋彬彬之死与《我虽死去》](/articles/dw/1024215.md)
+
+9-23 [信奉马克思主义的迪萨纳亚克就任斯里兰卡总统](/articles/dw/1024216.md)
+
 9-23 [美国拟全面禁止联网汽车使用中国软硬件](/articles/dw/1024217.md)
 
 9-23 [中国欲反制欧盟奶制品 布鲁塞尔诉诸WTO](/articles/dw/1024218.md)
@@ -596,8 +600,4 @@
 8-23 [印度总理莫迪抵达基辅开启对乌克兰的访问](/articles/dw/1024513.md)
 
 8-23 [賴清德任內首訪金門：不反攻大陸亦不願受中共統治](/articles/dw/1024514.md)
-
-8-23 [全球首例夜间无人驾驶巴士上路 成夜行族新宠](/articles/dw/1024515.md)
-
-8-22 [毕业即失业催生新热词“烂尾娃”](/articles/dw/1024516.md)
 
