--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-23 [中国钢铁全球泛滥，印度今年4至8月从中国成品钢进口创下7年来新高](/articles/voa/1012368.md)
+
+9-23 [欧盟就中国报复性调查欧盟乳制品向世贸组织提出挑战](/articles/voa/1012369.md)
+
 9-23 [聿文视界：湖南女厅官遇害，中国官场人人自危？](/articles/voa/1012370.md)
 
 9-23 [日本外相：将在美国纽约与中国外长王毅举行会谈](/articles/voa/1012371.md)
@@ -596,8 +600,4 @@
 9-11 [谷歌中国前负责人：中国人工智能模型落后美国6至9个月](/articles/voa/1012666.md)
 
 9-11 [俄乌战争进入关键节点，美英最高外交官罕见联访基辅](/articles/voa/1012667.md)
-
-9-11 [中国持续为外国培训执法官员，输出极权维稳理念](/articles/voa/1012668.md)
-
-9-11 [哈里斯和特朗普在总统辩论中针对中国问题展开激烈交锋](/articles/voa/1012669.md)
 
