--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-24 [五角大楼：随着地区战争风险扩大，美军向中东地区增派少数部队](/articles/voa/1012356.md)
+
 9-24 [专家: 中共黑客渗透各国政府、基础设施和企业网络，无所不在](/articles/voa/1012357.md)
 
 9-24 [以色列在黎巴嫩对真主党发动广泛袭击](/articles/voa/1012358.md)
@@ -598,6 +600,4 @@
 9-12 [一名前中情局人员因充当中国间谍而被判10年监禁并终生接受测谎检查](/articles/voa/1012654.md)
 
 9-12 [美众院“中国周”再通过三项抗衡中国影响力法案](/articles/voa/1012655.md)
-
-9-12 [曾任田纳西州联邦参议员和美国驻华大使的尚慕杰逝世](/articles/voa/1012656.md)
 
