--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-24 [四方机制进一步制度化，在中国问题上美日印澳“越来越结盟”](/articles/voa/1012353.md)
+
+9-24 [加利福尼亚州起诉埃克森美孚造成全球塑料污染](/articles/voa/1012354.md)
+
+9-24 [曾被中国拘押的加拿大人康明凯表示遭受了心理折磨](/articles/voa/1012355.md)
+
 9-24 [五角大楼：随着地区战争风险扩大，美军向中东地区增派少数部队](/articles/voa/1012356.md)
 
 9-24 [专家: 中共黑客渗透各国政府、基础设施和企业网络，无所不在](/articles/voa/1012357.md)
@@ -594,10 +600,4 @@
 9-12 [在华美企对中国的乐观情绪跌至历史最低点](/articles/voa/1012651.md)
 
 9-12 [朝鲜发射多枚短程弹道导弹](/articles/voa/1012652.md)
-
-9-12 [以色列空袭击中加沙一所联合国学校和两处住宅 至少34人死亡](/articles/voa/1012653.md)
-
-9-12 [一名前中情局人员因充当中国间谍而被判10年监禁并终生接受测谎检查](/articles/voa/1012654.md)
-
-9-12 [美众院“中国周”再通过三项抗衡中国影响力法案](/articles/voa/1012655.md)
 
