--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-24 [低音 | 侯芷明：为何我们要重提伊力哈木・土赫提？——写在伊力哈木・土赫提被捕十周年](/articles/cdt/336856.md)
+
 9-23 [每日一语 2024.9.23](/articles/cdt/336861.md)
 
 9-23 [风声OPINION｜一种社会凝视和偏见：当外卖小哥成为流量密码](/articles/cdt/336866.md)
@@ -598,6 +600,4 @@
 8-22 [【网络民议】“公开，平等，竞争，择优”是基本准则？不如说“公开，背景，内定，择亲”是基本准则](/articles/cdt/337838.md)
 
 8-19 [常识流通处｜是谁杀死了那个出租公寓里的外地女孩？](/articles/cdt/337841.md)
-
-8-19 [冰川思享号｜有些地方的基建已经养不起了](/articles/cdt/337844.md)
 
