--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-24 [中东暴力升级，拜登的时间已经不多了](/articles/nyt/1042363.md)
+
 9-24 [拜登政府禁止美国联网汽车使用中国研发软件](/articles/nyt/1042364.md)
 
 9-23 [报告称美国联邦研究资金被用于推动中国军事技术](/articles/nyt/1042365.md)
@@ -598,6 +600,4 @@
 6-20 [全球自由贸易是一个错误吗？](/articles/nyt/1042661.md)
 
 6-19 [英伟达超越微软，成为全球市值最高公司](/articles/nyt/1042662.md)
-
-6-19 [热爱“组团”理财的韩国人：一起存钱一起花](/articles/nyt/1042663.md)
 
