--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-24 [日籍男孩深圳遇刺身亡 王毅吁日本外相“冷静理性”处理](/articles/voa/1012343.md)
+
+9-24 [加拿大省政府支持的矿业工厂誓言在稀土领域与中国竞争](/articles/voa/1012344.md)
+
 9-24 [斯里兰卡新总统就任，他将如何平衡与中印的关系？](/articles/voa/1012345.md)
 
 9-24 [众院共和党人公布调查报告，称美中大学科研合作助长北京发展军事技术](/articles/voa/1012346.md)
@@ -596,8 +600,4 @@
 9-13 [路透独家：许家印被移送至深圳一特别拘留中心](/articles/voa/1012641.md)
 
 9-12 [布林肯访问波兰，乌能否使用西方远程武器打击俄纵深目标仍是悬念](/articles/voa/1012642.md)
-
-9-12 [泽连斯基称中国与巴西提出的和平建议具有“破坏性”](/articles/voa/1012643.md)
-
-9-12 [本田中国关厂大裁员，观察:下一波恐日系德系车企撤出](/articles/voa/1012644.md)
 
