--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-25 [日本人:中国一贯“反日政策”导致日童被杀，悲剧还会重演](/articles/voa/1012330.md)
+
+9-25 [世界战乱不断，联合国秘书长谴责有人自认为持有发动战争的“免罪卡”](/articles/voa/1012331.md)
+
+9-25 [以色列与真主党冲突进一步升级，各界担心中东战争全面扩大化](/articles/voa/1012332.md)
+
 9-24 [乌克兰：俄军武器使用的外国技术和零部件大部分来自中国](/articles/voa/1012333.md)
 
 9-24 [中国“重磅”放水万亿救房市 分析：太迟太少，经济低迷恐难缓](/articles/voa/1012334.md)
@@ -594,10 +600,4 @@
 9-13 [中国官方采用新宣传手段，试图重塑西藏和新疆人权叙事](/articles/voa/1012628.md)
 
 9-13 [击毙本·拉登的美军精锐为保护台湾密训？国防部：军人为“各种突发事件进行准备和培训”](/articles/voa/1012629.md)
-
-9-13 [防止中国等对手规避制裁，众院通过《制裁清单协调法》，参议员跨党推出法案参院版](/articles/voa/1012630.md)
-
-9-13 [签署六个月后，美国与太平洋岛国《自由联系协定》的关键措施仍未落实](/articles/voa/1012631.md)
-
-9-13 [荷兰议会通过动议，拒绝接受中国称联大2758号决议认定北京对台有主权的诠释](/articles/voa/1012632.md)
 
