--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-25 [雷叔说事｜罗翔真的解构辛亥革命了吗？](/articles/cdt/336839.md)
+
 9-24 [慕枫歌歌｜相信苹果手机爆炸的人，与相信照相机可以摄魂的人](/articles/cdt/336846.md)
 
 9-24 [一个生物狗的科普小园｜失去中国一年，日本水产业到底如何？我们用数据说话](/articles/cdt/336849.md)
@@ -598,6 +600,4 @@
 8-20 [老牌恶棍｜美驻华使馆“造假”，他蠢还是我们蠢？](/articles/cdt/337817.md)
 
 8-20 [游民星空｜给《黑神话：悟空》打8分的IGN编辑：别骂我祖宗，太疯狂了！](/articles/cdt/337822.md)
-
-8-20 [卖杏花｜非虚构，死在出租屋里](/articles/cdt/337824.md)
 
