--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-25 [美国情报部门警告：伊朗威胁暗杀特朗普](/articles/voa/1012309.md)
+
 9-25 [黎巴嫩称 只有美国才能停止以色列和真主党之间的战斗](/articles/voa/1012310.md)
 
 9-25 [印度与中国谨慎探索和解之路：边界谈判和经济合作现曙光](/articles/voa/1012311.md)
@@ -598,6 +600,4 @@
 9-14 [美中关系持续紧张之际，两军恢复高层沟通](/articles/voa/1012607.md)
 
 9-14 [美国众议院通过法案，为反击中国虚假宣传拨款16亿美元](/articles/voa/1012608.md)
-
-9-14 [英国支持基辅袭击俄罗斯本土惹恼莫斯科，俄罗斯驱逐六名驻俄英国外交官](/articles/voa/1012609.md)
 
