--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-25 [饲养成本过高，芬兰动物园大熊猫将归还中国](/articles/voa/1012305.md)
+
 9-25 [警方追求绩效与社群监控 脱北者在中国寸步难行](/articles/voa/1012306.md)
 
 9-25 [中国央行下调中期贷款利率，多数亚股续涨](/articles/voa/1012307.md)
@@ -598,6 +600,4 @@
 9-14 [联合国报告详细揭露中国如何报复与联合国接触的人](/articles/voa/1012603.md)
 
 9-14 [泽连斯基：将向拜登提交他的和平计划](/articles/voa/1012604.md)
-
-9-14 [在地缘政治紧张和经济挑战下，中国在南亚资助的项目面临挫折](/articles/voa/1012605.md)
 
