--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-25 [不止大众 欧洲车企普遍面临减产压力](/articles/dw/1024201.md)
+
 9-25 [中国向公海试射洲际弹道导弹 专家：强烈信号](/articles/dw/1024202.md)
 
 9-25 [亚洲实力指数：美国仍居首，中国军力在赶超](/articles/dw/1024203.md)
@@ -598,6 +600,4 @@
 8-24 [德国索林根市持刀袭击案：警方逮捕一名嫌疑人](/articles/dw/1024499.md)
 
 8-24 [菲律宾指责中国对其巡逻机发射照明弹](/articles/dw/1024500.md)
-
-8-24 [朝鲜谴责美国最新核战略计划](/articles/dw/1024501.md)
 
