--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-25 [澳大利亚财长即将访华，澳中关系缓和还在继续](/articles/voa/1012303.md)
+
 9-25 [中国网络观察：被拘留学者，为党为国？妄议中央？](/articles/voa/1012304.md)
 
 9-25 [饲养成本过高，芬兰动物园大熊猫将归还中国](/articles/voa/1012305.md)
@@ -598,6 +600,4 @@
 9-14 [五角大楼考虑在日本部署中程导弹 美议员表支持](/articles/voa/1012601.md)
 
 9-14 [五角大楼：援乌资金尚余59亿美元，若10月1日前未用尽，授权将到期](/articles/voa/1012602.md)
-
-9-14 [联合国报告详细揭露中国如何报复与联合国接触的人](/articles/voa/1012603.md)
 
