--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-25 [以色列成功拦截真主党袭击摩萨德总部的导弹，古特雷斯：黎巴嫩濒临崩溃](/articles/voa/1012301.md)
+
 9-25 [路透惊爆：俄国营武器商在中国秘设工厂，生产远程攻击无人机](/articles/voa/1012302.md)
 
 9-25 [澳大利亚财长即将访华，澳中关系缓和还在继续](/articles/voa/1012303.md)
@@ -598,6 +600,4 @@
 9-14 [中俄宣传媒体如何报道或忽略美国大选各个方面](/articles/voa/1012599.md)
 
 9-14 [美国防部依“总统提取权”运抵台湾装备受损发霉和过期，五角大楼监察报告指未有效落实问责管理并将有负面后果](/articles/voa/1012600.md)
-
-9-14 [五角大楼考虑在日本部署中程导弹 美议员表支持](/articles/voa/1012601.md)
 
