--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-26 [美国无人机产业组团访台 分析：美台打造“非红供应链”](/articles/voa/1012299.md)
+
+9-26 [中东三国：制止加沙冲突是阻止整个地区战争升级的关键](/articles/voa/1012300.md)
+
 9-25 [以色列成功拦截真主党袭击摩萨德总部的导弹，古特雷斯：黎巴嫩濒临崩溃](/articles/voa/1012301.md)
 
 9-25 [路透惊爆：俄国营武器商在中国秘设工厂，生产远程攻击无人机](/articles/voa/1012302.md)
@@ -596,8 +600,4 @@
 9-14 [台湾希望美国延迟交付的F-16V战机能在今年年底前开始出厂](/articles/voa/1012597.md)
 
 9-14 [美中在非洲加大争夺军事影响力](/articles/voa/1012598.md)
-
-9-14 [中俄宣传媒体如何报道或忽略美国大选各个方面](/articles/voa/1012599.md)
-
-9-14 [美国防部依“总统提取权”运抵台湾装备受损发霉和过期，五角大楼监察报告指未有效落实问责管理并将有负面后果](/articles/voa/1012600.md)
 
