--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-26 [泽连斯基联大发言：不接受他国将其意愿强加给乌克兰，质疑中国推动和谈的动机](/articles/voa/1012295.md)
+
+9-26 [以军总参谋长告诉官兵为地面攻入黎巴嫩做好准备](/articles/voa/1012296.md)
+
 9-26 [为突破劳动力萎缩困局，北京再出新招让老年人扩大社会参与](/articles/voa/1012297.md)
 
 9-26 [泽连斯基：必须迫使莫斯科接受和平](/articles/voa/1012298.md)
@@ -596,8 +600,4 @@
 9-14 [中国谴责德国两艘军舰穿越台湾海峡 称这“增加安全风险](/articles/voa/1012593.md)
 
 9-14 [中国8月份工业生产、零售销售低迷](/articles/voa/1012594.md)
-
-9-14 [二十国集团同意共同努力打击虚假信息并制定人工智能指导方针](/articles/voa/1012595.md)
-
-9-14 [加州夫妇涉中国赴美生育旅游计划被定罪](/articles/voa/1012596.md)
 
