--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-26 [台湾和美国将联手制造无人机，抗衡中国产业主导地位](/articles/nyt/1042355.md)
+
 9-26 [中国称向太平洋海域发射一枚洲际弹道导弹](/articles/nyt/1042356.md)
 
 9-25 [危险碰撞、强力水炮：中国如何在南海与菲律宾对峙](/articles/nyt/1042357.md)
@@ -598,6 +600,4 @@
 6-21 [美俄中会重启核试验吗](/articles/nyt/1042653.md)
 
 6-21 [面对俄朝条约，韩国日本的恐慌和忧虑](/articles/nyt/1042654.md)
-
-6-21 [酸辣粉和酸菜鱼：更多内地餐馆涌入香港](/articles/nyt/1042655.md)
 
