--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-26 [真主党寻呼机被引爆 手机用户需要担心吗?](/articles/dw/1024197.md)
+
 9-26 [日媒：海上自衛隊船艦首度通過台灣海峽](/articles/dw/1024198.md)
 
 9-25 [越共领导人苏林将会拜登：在美中之间平衡](/articles/dw/1024199.md)
@@ -598,6 +600,4 @@
 8-25 [南中国海紧张局势如何威胁全球贸易？](/articles/dw/1024495.md)
 
 8-24 [乌克兰独立日：泽连斯基放狠话 俄乌交换战俘](/articles/dw/1024496.md)
-
-8-24 [Meta：伊朗黑客攻击拜登和特朗普工作人员WhatsApp账户](/articles/dw/1024497.md)
 
