--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-26 [强化防灾与备战 台湾明年拟办“全社会”无剧本演习](/articles/voa/1012279.md)
+
 9-26 [路透：美国为泽连斯基访问准备了80亿美元的军援计划](/articles/voa/1012280.md)
 
 9-26 [拜登会见越南领导人苏林 抗衡中俄影响力](/articles/voa/1012281.md)
@@ -598,6 +600,4 @@
 9-15 [教宗方济各抨击哈里斯和特朗普都“反对生命”](/articles/voa/1012577.md)
 
 9-15 [缅甸军政府罕见请求外国援助 以应对台风“摩羯”带来的致命洪灾](/articles/voa/1012578.md)
-
-9-15 [俄乌经阿联酋斡旋交换206名战俘](/articles/voa/1012579.md)
 
