--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-26 [每日一语 2024.9.25](/articles/cdt/336804.md)
+
 9-26 [【404文库】历史总在押韵｜作死！在自己权力范围内，最大限度的为难了无牵挂的人](/articles/cdt/336808.md)
 
 9-25 [真实故事计划｜发生在离婚期间的杀人](/articles/cdt/336814.md)
@@ -598,6 +600,4 @@
 8-22 [每日一语 2024.8.21](/articles/cdt/337767.md)
 
 8-22 [纵览新闻｜给储户赋红码被处分的女官员，已任郑州文旅局一把手](/articles/cdt/337772.md)
-
-8-22 [旧闻评论｜舆论手札：新闻界欠陈女士一篇人物特稿](/articles/cdt/337774.md)
 
