--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-26 [纽约市长埃里克·亚当斯因腐败调查遭到起诉](/articles/voa/1012278.md)
+
 9-26 [强化防灾与备战 台湾明年拟办“全社会”无剧本演习](/articles/voa/1012279.md)
 
 9-26 [路透：美国为泽连斯基访问准备了80亿美元的军援计划](/articles/voa/1012280.md)
@@ -598,6 +600,4 @@
 9-15 [北约官员称乌克兰有充份军事理由使用西方武器打击俄罗斯](/articles/voa/1012576.md)
 
 9-15 [教宗方济各抨击哈里斯和特朗普都“反对生命”](/articles/voa/1012577.md)
-
-9-15 [缅甸军政府罕见请求外国援助 以应对台风“摩羯”带来的致命洪灾](/articles/voa/1012578.md)
 
