--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-26 [经济挑战严峻，中共政治局誓言加大财政支出，力保今年增长目标](/articles/voa/1012276.md)
+
 9-26 [台北指责北京穷兵黩武，以导弹试射和军演威胁周边邻国](/articles/voa/1012277.md)
 
 9-26 [纽约市长埃里克·亚当斯因腐败调查遭到起诉](/articles/voa/1012278.md)
@@ -598,6 +600,4 @@
 9-15 [菲律宾表示将向萨比纳浅滩派遣替代舰艇 誓言将持续驻扎](/articles/voa/1012574.md)
 
 9-15 [委内瑞拉以涉嫌“颠覆”国家的理由逮捕美国、西班牙和捷克公民](/articles/voa/1012575.md)
-
-9-15 [北约官员称乌克兰有充份军事理由使用西方武器打击俄罗斯](/articles/voa/1012576.md)
 
