--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [巴勒斯坦人领袖阿巴斯联大发言，呼吁停止向以色列运送武器](/articles/voa/1012268.md)
+
 9-27 [美官员：中国隐瞒核潜艇沉没事件](/articles/voa/1012269.md)
 
 9-27 [香港《立场新闻》煽动案判刑 前总编缉钟沛权重判入狱21月 林绍桐即时释放](/articles/voa/1012270.md)
@@ -598,6 +600,4 @@
 9-16 [美中军事领导人结束南中国海等议题的讨论](/articles/voa/1012566.md)
 
 9-16 [北京香山论坛期间美中再次举行军事政策会晤](/articles/voa/1012567.md)
-
-9-15 [英外交大臣拉米称普京威胁纯为“咆哮”，俄军星期天持续对乌空袭](/articles/voa/1012568.md)
 
