--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [国会两院共和党议员推出法案，拟取消对华投资的资本利得优惠税率，以鼓励从中国撤资](/articles/voa/1012267.md)
+
 9-27 [巴勒斯坦人领袖阿巴斯联大发言，呼吁停止向以色列运送武器](/articles/voa/1012268.md)
 
 9-27 [美官员：中国隐瞒核潜艇沉没事件](/articles/voa/1012269.md)
@@ -598,6 +600,4 @@
 9-16 [美国特勤局在特朗普高尔夫俱乐部附近向持枪嫌疑人开枪，特朗普安然无恙](/articles/voa/1012565.md)
 
 9-16 [美中军事领导人结束南中国海等议题的讨论](/articles/voa/1012566.md)
-
-9-16 [北京香山论坛期间美中再次举行军事政策会晤](/articles/voa/1012567.md)
 
