--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-27 [端传媒｜一个立场新闻记者的手记：苦厄让人看清，什么东西在闪闪发光（节选）](/articles/cdt/336786.md)
+
+9-27 [【立此存照】财新｜黑龙江一厅官被指“私自阅看含有破坏党的团结统一等内容的非法出版物”](/articles/cdt/336787.md)
+
 9-27 [钱江说当代史｜我来谈谈卞仲耘有没有在土改中害人杀人——由宋彬彬去世引起的话题](/articles/cdt/336790.md)
 
 9-27 [李承鹏｜你看那满天飞来的沙鸡，就是这个时代](/articles/cdt/336792.md)
@@ -596,8 +600,4 @@
 8-23 [姐妹撒泼指北｜不需要女性玩家的《黑神话》，在营销中自嗨](/articles/cdt/337735.md)
 
 8-23 [城市的地得｜好的写作者比较穷，还没轮到你们同情](/articles/cdt/337737.md)
-
-8-23 [歪脑｜作为思想犯的王建兵与黄雪琴：在互助与连结中获得滋养的灵魂](/articles/cdt/337738.md)
-
-8-23 [【网络民议】我们仍缺乏让游戏行业自由健康发展的氛围](/articles/cdt/337745.md)
 
