--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-27 [廉价机票和被删除的信息：亚当斯案起诉书的10个关键细节](/articles/nyt/1042350.md)
+
 9-27 [Telegram如何成为犯罪分子和恐怖分子的游乐场](/articles/nyt/1042351.md)
 
 9-27 [香港《立场新闻》“煽动”案宣判，两名编辑获刑](/articles/nyt/1042352.md)
@@ -598,6 +600,4 @@
 6-25 [致命洪水席卷中国南方，广东至少47人遇难](/articles/nyt/1042648.md)
 
 6-24 [追寻我父亲的边疆：他在中共军队的岁月](/articles/nyt/1042649.md)
-
-6-24 [普京来亚洲“搞破坏“，他成功了](/articles/nyt/1042650.md)
 
