--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-27 [中国股市创16年来最大单周涨幅](/articles/nyt/1042348.md)
+
 9-27 [为何马斯克这样的硅谷精英会支持特朗普](/articles/nyt/1042349.md)
 
 9-27 [廉价机票和被删除的信息：亚当斯案起诉书的10个关键细节](/articles/nyt/1042350.md)
@@ -598,6 +600,4 @@
 6-25 [中国异见人士权平首次公开讲述逃亡韩国细节](/articles/nyt/1042646.md)
 
 6-25 [韩国锂电池工厂火灾，18名中国劳工遇难](/articles/nyt/1042647.md)
-
-6-25 [致命洪水席卷中国南方，广东至少47人遇难](/articles/nyt/1042648.md)
 
