--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [美中外长将会晤，或讨论中企对俄罗斯供应无人机](/articles/voa/1012254.md)
+
 9-27 [中国央行降准以刺激贷款，沪港股劲扬](/articles/voa/1012255.md)
 
 9-27 [日本自民党将选出新总裁接替即将卸任的首相岸田文雄](/articles/voa/1012256.md)
@@ -598,6 +600,4 @@
 9-16 [蒲黄榆说：砸锅卖铁、延长退休、苦力主义：北京踏入一个灰犀牛阵](/articles/voa/1012552.md)
 
 9-16 [国际民主日洛杉矶异议人士集会要求中共停止迫害民主人士，称独裁者无资格代表中国](/articles/voa/1012553.md)
-
-9-16 [香港新国安法首例 诸启邦因穿着“煽动性”T恤而被定罪](/articles/voa/1012554.md)
 
