--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [中国导弹试射后，斐济呼吁“尊重我们的地区”](/articles/voa/1012252.md)
+
 9-27 [澳大利亚财政部长访问北京 讨论贸易、投资和近期的刺激措施](/articles/voa/1012253.md)
 
 9-27 [美中外长将会晤，或讨论中企对俄罗斯供应无人机](/articles/voa/1012254.md)
@@ -598,6 +600,4 @@
 9-16 [中国公安国际化 铺设建构全球情报网络？](/articles/voa/1012550.md)
 
 9-16 [意大利外长面告中国商务部长：罗马支持欧盟加征中国产电动车反补贴关税](/articles/voa/1012551.md)
-
-9-16 [蒲黄榆说：砸锅卖铁、延长退休、苦力主义：北京踏入一个灰犀牛阵](/articles/voa/1012552.md)
 
