--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-27 [德语媒体：危机不会消失](/articles/dw/1024182.md)
+
 9-27 [美国总统拜登下月将对德国进行“告别访问”](/articles/dw/1024183.md)
 
 9-27 [专访：新政下不见“大牛” 不如关门大吉](/articles/dw/1024184.md)
@@ -598,6 +600,4 @@
 8-26 [澳參院通過挺台動議 專家：勇敢的舉動](/articles/dw/1024480.md)
 
 8-26 [中國研擬「房屋養老金」引論戰 爭議為何？](/articles/dw/1024481.md)
-
-8-26 [客座評論：任人打扮的小姑娘—香港「國家安全展覽」](/articles/dw/1024482.md)
 
