--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-27 [菲律宾再次顺利向第二托马斯浅滩坐滩军舰运送后勤补给](/articles/voa/1012248.md)
+
+9-27 [美海岸警卫队司令：中俄海军在阿拉斯加活动增加，美军用存在对付存在](/articles/voa/1012249.md)
+
 9-27 [赖清德祝贺石破茂当选日本自民党总裁，期待深化台日关系](/articles/voa/1012250.md)
 
 9-27 [日本资深议员石破茂“最后一战” 赢得自民党总裁选举并将出任首相](/articles/voa/1012251.md)
@@ -596,8 +600,4 @@
 9-17 [深化战略合作，中俄海军在日本海进行导弹和火炮发射演习](/articles/voa/1012546.md)
 
 9-16 [香港记协指各界对数十名记者被系统性滋扰未及以往重视](/articles/voa/1012547.md)
-
-9-16 [涉嫌试图刺杀特朗普的枪手瑞恩·罗斯持强烈的挺乌反俄和亲台反中立场](/articles/voa/1012548.md)
-
-9-16 [遭中国监管当局天价处罚后，普华永道有意转向“高质量可持续”业务](/articles/voa/1012549.md)
 
