--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-28 [曾被称亲中的石破茂将成日本首相 专家：防卫更强硬，友台立场不变](/articles/voa/1012243.md)
+
 9-28 [印度钢铁协会警告说，中国钢材遭美国加征关税后或转向印度倾销](/articles/voa/1012244.md)
 
 9-28 [奥地利议会选举在即 主要政党对华政策引发关注](/articles/voa/1012245.md)
@@ -598,6 +600,4 @@
 9-17 [暗杀特朗普嫌疑人受到两项与枪支有关的指控](/articles/voa/1012541.md)
 
 9-17 [“一颗老鼠屎坏了一锅粥”孙雯被控为“中共代理人”后，一些在美华人这么看](/articles/voa/1012542.md)
-
-9-17 [英国有影响力议员：英国应禁止新疆强迫劳动产品进口，严格审查希音上市](/articles/voa/1012543.md)
 
