--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 10-9 [张3丰的世界｜“遮蔽”不会带来安全感](/articles/cdt/336490.md)
 
+10-9 [极昼工作室｜白石洲拆迁后，那些上学奔波的孩子都去哪儿了？](/articles/cdt/336494.md)
+
 10-9 [个人记忆库｜过去一年，中国人对外部世界的观感全面恶化](/articles/cdt/336496.md)
 
 10-9 [三联生活周刊｜餐饮业进入寒冬，你还舍得去餐馆吃饭吗？](/articles/cdt/336498.md)
@@ -598,6 +600,4 @@
 9-3 [读宋史的赵大胖｜那个晕倒的孩子，以及身边站得直挺挺的同学](/articles/cdt/337427.md)
 
 9-3 [城市的地得｜有一种真正的漠不关心](/articles/cdt/337429.md)
-
-9-3 [亮见｜发明“恶意返乡”的县长升官了，恭喜恭喜](/articles/cdt/337431.md)
 
