--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+10-10 [在韩国这间办公室里，与朝鲜统一的梦想依然鲜活而深沉](/articles/nyt/1042323.md)
+
+10-10 [与中国“分手”很难](/articles/nyt/1042324.md)
+
 10-10 [“牛市来了，我得赚钱”：中国年轻股民蜂拥入市](/articles/nyt/1042325.md)
 
 10-9 [美国应该怎样制定对华贸易新战略](/articles/nyt/1042326.md)
@@ -596,8 +600,4 @@
 7-3 [朝鲜人的“必备单品”：金正恩像章](/articles/nyt/1042621.md)
 
 7-2 [拜登团队无视退选呼声与质疑，坚持继续参选](/articles/nyt/1042622.md)
-
-7-2 [“马克龙主义”自残式失败，法国面临危险分水岭](/articles/nyt/1042623.md)
-
-7-2 [特朗普被裁定享有部分刑事起诉豁免权，这意味着什么](/articles/nyt/1042624.md)
 
