--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-10 [人类有可能活到150岁吗？](/articles/nyt/1042322.md)
+
 10-10 [在韩国这间办公室里，与朝鲜统一的梦想依然鲜活而深沉](/articles/nyt/1042323.md)
 
 10-10 [与中国“分手”很难](/articles/nyt/1042324.md)
@@ -598,6 +600,4 @@
 7-3 [担心选举失败，民主党人公开表达对拜登担忧](/articles/nyt/1042620.md)
 
 7-3 [朝鲜人的“必备单品”：金正恩像章](/articles/nyt/1042621.md)
-
-7-2 [拜登团队无视退选呼声与质疑，坚持继续参选](/articles/nyt/1042622.md)
 
