--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-10 [韩国作家韩江获得2024年诺贝尔文学奖](/articles/dw/1024050.md)
+
+10-10 [战火中的故乡: 来自加沙的“德国声音”](/articles/dw/1024051.md)
+
 10-10 [上合会议期间 巴基斯坦限制中国人出行](/articles/dw/1024052.md)
 
 10-10 [宝马和奔驰在中国市场销量大幅下滑](/articles/dw/1024053.md)
@@ -596,8 +600,4 @@
 9-8 [媒体：美国相信伊朗向俄罗斯转让了短程弹道导弹](/articles/dw/1024348.md)
 
 9-8 [大众CEO:节约势在必行 左翼党主席:请退还股息](/articles/dw/1024349.md)
-
-9-8 [巴西：封禁X平台引发的抗议浪潮加剧](/articles/dw/1024350.md)
-
-9-8 [普京：我家里有小孩能说流利的中文](/articles/dw/1024351.md)
 
