--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-11 [闻所未闻：香港法官以议题过于复杂为由驳回黎智英的一项陪审团审理请求](/articles/voa/1011901.md)
+
+10-11 [乘虚而入：德日车企撤离俄罗斯，中国奇瑞在俄组装汽车](/articles/voa/1011902.md)
+
 10-10 [中国制裁美国三家军工企业和十名高管，报复美方最新对台军援](/articles/voa/1011903.md)
 
 10-10 [韩日领导人在万象举行首次峰会，誓言深化安全与经济关系](/articles/voa/1011904.md)
@@ -596,8 +600,4 @@
 9-30 [中国调查PVH集团抵制新疆棉花事件，全球供应链透明度再受关注](/articles/voa/1012199.md)
 
 9-29 [俄乌互相袭击，克里姆林宫称俄将正式确立其修订后的核威慑战略](/articles/voa/1012200.md)
-
-9-29 [台商撤离中国成显学 下一波日商首当其冲？](/articles/voa/1012201.md)
-
-9-29 [世界媒体看中国: 习近平的炮舰外交](/articles/voa/1012202.md)
 
