--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-11 [巴勒斯坦人称以军空袭加沙学校打死至少27人,以色列称目标是嵌入校内的武装分子指挥所](/articles/voa/1011897.md)
+
+10-11 [欧洲议会通过紧急决议，要求中国立即释放维吾尔人土赫提和阿巴斯](/articles/voa/1011898.md)
+
 10-11 [以色列和伊朗的全面战争会导致全球油价飙升吗？](/articles/voa/1011899.md)
 
 10-11 [澳门特首选举周日举行 市民冷眼旁观京人治澳](/articles/voa/1011900.md)
@@ -596,8 +600,4 @@
 9-30 [以色列袭击也门胡塞武装目标，导致至少4人死亡](/articles/voa/1012195.md)
 
 9-30 [抗衡中国垄断关键矿物，美国结合盟友出新招](/articles/voa/1012196.md)
-
-9-30 [美国加强中东地区的空中支援和军队部署准备](/articles/voa/1012197.md)
-
-9-30 [中共火箭军和陆军进行内陆多地多波次导弹实射令台湾警觉](/articles/voa/1012198.md)
 
