--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-11 [台湾陆委会：富士康四名台湾雇员在郑州被拘留](/articles/voa/1011894.md)
+
 10-11 [美国通胀率降至2021年2月以来最低点，但仍存在一些物价压力](/articles/voa/1011895.md)
 
 10-11 [直击大选假信息：美国对以色列的支持成中国网络影响力行动的最主要目标](/articles/voa/1011896.md)
@@ -598,6 +600,4 @@
 9-30 [中国10月底前预计下调存量房贷利率 多省市放松购房限制](/articles/voa/1012192.md)
 
 9-30 [化工厂起火，居民疏散，亚特兰大市郊外的州际公路关闭](/articles/voa/1012193.md)
-
-9-30 [应急人员和物资紧急调往北卡罗来纳州，佛罗里达州同时清理海伦飓风的损失](/articles/voa/1012194.md)
 
