--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-11 [赖清德双十讲话将引来中国军演？美国敦促中国克制](/articles/voa/1011888.md)
+
+10-11 [以色列袭击贝鲁特和加沙，打死数十人](/articles/voa/1011889.md)
+
+10-11 [佛罗里达居民评估飓风米尔顿带来的损害](/articles/voa/1011890.md)
+
 10-11 [韩国总统尹锡悦走访东南亚 广结伙伴 扩大影响](/articles/voa/1011891.md)
 
 10-11 [一名被中国通缉的嫌疑人在印尼被捕，涉嫌140亿美元投资诈骗](/articles/voa/1011892.md)
@@ -594,10 +600,4 @@
 9-30 [日本即将上任的新首相石破茂内阁大致底定](/articles/voa/1012186.md)
 
 9-30 [乌克兰：在最新一轮袭击中击落了67架俄罗斯无人机](/articles/voa/1012187.md)
-
-9-30 [财新PMI显示中国9月份工厂活动明显降温](/articles/voa/1012188.md)
-
-9-30 [奥地利极右翼政党在国民议会选举中赢得二战以来的首次胜利](/articles/voa/1012189.md)
-
-9-30 [洪水和山体滑坡已造成尼泊尔至少151人遇难](/articles/voa/1012190.md)
 
