--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+10-11 [战争阴影下，一个个脆弱清白的生命](/articles/nyt/1042320.md)
+
+10-11 [印度积极经济援助邻国，对抗中国影响力](/articles/nyt/1042321.md)
+
 10-10 [人类有可能活到150岁吗？](/articles/nyt/1042322.md)
 
 10-10 [在韩国这间办公室里，与朝鲜统一的梦想依然鲜活而深沉](/articles/nyt/1042323.md)
@@ -596,8 +600,4 @@
 7-3 [拜登真的越来越“老糊涂”了？](/articles/nyt/1042618.md)
 
 7-3 [拜登能送给美国的最好的礼物：退选](/articles/nyt/1042619.md)
-
-7-3 [担心选举失败，民主党人公开表达对拜登担忧](/articles/nyt/1042620.md)
-
-7-3 [朝鲜人的“必备单品”：金正恩像章](/articles/nyt/1042621.md)
 
