--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-11 [祭新措施救經濟？中國財政部記者會即將登場](/articles/dw/1024046.md)
+
 10-10 [北约宣布将于下周一开始年度核演习](/articles/dw/1024047.md)
 
 10-10 [路透社：中国奇瑞接管大众、奔驰和日产在俄罗斯的生产线](/articles/dw/1024048.md)
@@ -598,6 +600,4 @@
 9-9 [美国财长耶伦：下届政府应将美中关系立为“优先事项”](/articles/dw/1024344.md)
 
 9-9 [美媒：秦刚被任命出版社低阶职务](/articles/dw/1024345.md)
-
-9-9 [1972慕尼黑惨案周年之际 一名枪手被击毙](/articles/dw/1024346.md)
 
