--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-11 [墨西哥石油公司德州炼油厂泄漏事故致2人死亡，35人受伤](/articles/voa/1011885.md)
+
 10-11 [中国总理李强与日本首相石破茂在东盟峰会期间举行会晤](/articles/voa/1011886.md)
 
 10-11 [美司法部对一名进口中国太阳能电池板却逃避支付高额关税的男子提起诉讼](/articles/voa/1011887.md)
@@ -598,6 +600,4 @@
 9-30 [聿文视界：民营企业家是中共自家人？](/articles/voa/1012183.md)
 
 9-30 [以色列扩大对黎巴嫩的袭击 首次空袭贝鲁特市中心](/articles/voa/1012184.md)
-
-9-30 [法国极右领导人勒庞涉嫌挪用欧盟资金出庭受审](/articles/voa/1012185.md)
 
