--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-11 [男人并不需要“正面男子气概”](/articles/nyt/1042316.md)
+
 10-11 [诺奖获奖作家韩江：“直面历史创伤，揭露人类生命的脆弱”](/articles/nyt/1042317.md)
 
 10-11 [富士康四名台湾员工在郑州被拘留](/articles/nyt/1042318.md)
@@ -598,6 +600,4 @@
 7-4 [中国全面审查游泳禁药丑闻，为何沉默而非反击？](/articles/nyt/1042614.md)
 
 7-4 [美国的领导人危机是给习近平和普京的大礼](/articles/nyt/1042615.md)
-
-7-4 [美国自2018年以来首次通过大型包机遣返中国移民](/articles/nyt/1042616.md)
 
